--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="eventos.js">
+
 </head>
 <body>
-    <button onclick="alert('Hola!')"> "Saludar"</button>
+    <div class="contenedor">
+        <button onclick="alert('Hola!')"> "Saludar"</button>
+    </div>
+    
 </body>
 </html>
