--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="eventos.js">
-
+    <title>Taller eventos</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <div class="contenedor">
-        <button onclick="alert('Hola!')"> "Saludar"</button>
-    </div>
-    
+        <button onclick="alert('Hola!')">Saludar</button> 
 </body>
 </html>
