--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
         <button onclick="alert('Hola!')">Saludar</button> 
+
+        <script src="eventos.js"></script>
 </body>
+
 </html>
