--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     
 </head>
 <body>
-        <button onclick="alert('Hola!')">Saludar</button> 
+
+    <div id="midiv">
+        <button onclick="alert('Hola'); eventos.stopPropagation();">Saludar</button>
+    </div>    
 
         <script src="eventos.js"></script>
 </body>
