--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="midiv">
-        <button onclick="alert('Hola'); eventos.stopPropagation();">Saludar</button>
+        <button onclick="alert('Hola');">Saludar</button>
     </div>    
 
         <script src="eventos.js"></script>
